Fix bean creation and value injection